--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@
         }
 
         function downloadApk() {
-            const apkUrl = 'https://drive.google.com/uc?export=download&id=1a2b3c4d5e6f7g8h9i0j';
+            const apkUrl = 'https://appsgeyser.io/18713925/OPPER-Payment';
             const a = document.createElement('a');
             a.href = apkUrl;
             a.download = 'opper-payment.apk';
