--- a/public/support.html
+++ b/public/support.html
@@ -3,183 +3,244 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPPER Payment - Customer Support</title>
+    <title>OPPER Customer Support</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
         body {
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
             min-height: 100vh;
             padding: 20px;
             color: #fff;
             font-size: 16px;
+            position: relative;
+            overflow-x: hidden;
         }
-        .container {
+        .background-waves {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            max-width: 450px;
-            margin: 0 auto;
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            padding: 20px;
+            height: 100%;
+            z-index: -1;
+            background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"%3E%3Cpath fill="%23ffd700" fill-opacity="0.2" d="M0,192L48,176C96,160,192,128,288,149.3C384,171,480,245,576,256C672,267,768,213,864,186.7C960,160,1056,160,1152,176C1248,192,1344,224,1392,240L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"%3E%3C/path%3E%3C/svg%3E') repeat;
+            animation: wave 10s infinite linear;
         }
-        h2 {
+        @keyframes wave {
+            0% { background-position: 0 0; }
+            100% { background-position: 1440px 0; }
+        }
+        h1 {
             text-align: center;
             color: #ffd700;
             margin-bottom: 20px;
-            font-size: 1.8rem;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            font-size: 2rem;
+            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 0.5s ease;
         }
-        .chat-area {
-            height: 400px;
-            overflow-y: auto;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .chat-container {
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(15px);
+            border: 2px solid rgba(255, 215, 0, 0.3);
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .chat-messages {
+            height: 60vh;
+            overflow-y: auto;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .message {
-            margin-bottom: 15px;
+            max-width: 70%;
             padding: 10px;
             border-radius: 10px;
-            max-width: 80%;
+            font-size: 0.9rem;
+            position: relative;
         }
-        .message.sent {
-            background: #00c4ff;
-            margin-left: auto;
+        .message.user {
+            background: linear-gradient(135deg, #ffd700, #ffaa00);
+            color: #1a2a6c;
+            align-self: flex-end;
+        }
+        .message.admin {
+            background: linear-gradient(135deg, #00c4ff, #007bff);
             color: #fff;
-        }
-        .message.received {
-            background: #ffd700;
-            color: #1e3c72;
+            align-self: flex-start;
         }
         .message img {
             max-width: 100%;
             border-radius: 10px;
+            margin-top: 5px;
         }
         .message audio {
             width: 100%;
+            margin-top: 5px;
         }
-        .input-area {
+        .message-timestamp {
+            font-size: 0.7rem;
+            color: rgba(255, 255, 255, 0.7);
+            margin-top: 5px;
+        }
+        .chat-input {
             display: flex;
             gap: 10px;
-            align-items: center;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.05);
+            border-top: 2px solid rgba(255, 215, 0, 0.3);
         }
-        .input-area input[type="text"] {
+        .chat-input input[type="text"] {
             flex: 1;
             padding: 10px;
-            border: 1px solid #ffd700;
+            border: 2px solid #ffd700;
             border-radius: 10px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.15);
             color: #fff;
             outline: none;
         }
-        .input-area button {
+        .chat-input input[type="text"]:focus {
+            border-color: #00c4ff;
+            box-shadow: 0 0 10px rgba(0, 196, 255, 0.5);
+        }
+        .chat-input button, .chat-input label {
             padding: 10px;
-            background: linear-gradient(135deg, #00c4ff, #007bff);
+            background: linear-gradient(135deg, #ffd700, #ffaa00);
             border: none;
             border-radius: 10px;
-            color: #fff;
+            color: #1a2a6c;
+            font-weight: 600;
             cursor: pointer;
-            position: relative;
-            overflow: hidden;
+            transition: all 0.3s ease;
         }
-        .input-area button:hover {
-            background: linear-gradient(135deg, #007bff, #00c4ff);
+        .chat-input button:hover, .chat-input label:hover {
+            background: linear-gradient(135deg, #ffaa00, #ffd700);
+            transform: scale(1.05);
         }
-        .input-area button::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 0;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            transition: width 0.6s ease, height 0.6s ease;
-        }
-        .input-area button:active::after {
-            width: 100px;
-            height: 100px;
+        .chat-input input[type="file"] {
+            display: none;
         }
         .back-btn {
-            width: 100%;
-            padding: 12px;
-            background: linear-gradient(135deg, #ff6f61, #ff9f43);
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background: linear-gradient(135deg, #ff6f61, #ffd700);
+            color: #1a2a6c;
             border: none;
             border-radius: 10px;
-            color: #fff;
-            font-weight: 700;
+            font-weight: 600;
             cursor: pointer;
-            margin-top: 20px;
+            transition: all 0.3s ease;
         }
         .back-btn:hover {
-            background: linear-gradient(135deg, #ff9f43, #ff6f61);
+            background: linear-gradient(135deg, #ffd700, #ff6f61);
+            transform: scale(1.05);
+        }
+        .error-message {
+            color: #ff6f61;
+            text-align: center;
+            margin-top: 10px;
+            font-weight: 600;
+            font-size: 0.9rem;
         }
         @media (max-width: 480px) {
-            body { padding: 10px; }
-            h2 { font-size: 1.5rem; }
-            .chat-area { height: 300px; }
+            body { padding: 10px; font-size: 14px; }
+            h1 { font-size: 1.5rem; }
+            .chat-container { padding: 15px; }
+            .chat-input button, .chat-input label { padding: 8px; }
+            .message { max-width: 85%; }
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h2>Customer Support</h2>
-        <div class="chat-area" id="chat-area"></div>
-        <div class="input-area">
-            <input type="text" id="chat-input" placeholder="Type your message...">
-            <input type="file" id="chat-image" accept="image/*" style="display: none;">
-            <button onclick="document.getElementById('chat-image').click()"><img src="https://cdn-icons-png.flaticon.com/512/1087/1087840.png" alt="Image" width="24"></button>
-            <button onclick="startRecording()"><img src="https://cdn-icons-png.flaticon.com/512/149/149135.png" alt="Mic" width="24"></button>
-            <button onclick="sendMessage()">Send</button>
+    <div class="background-waves"></div>
+    <button class="back-btn" onclick="window.location.href='index.html'">Back to Payment</button>
+    <h1>OPPER Customer Support</h1>
+    <div class="chat-container">
+        <div class="chat-messages" id="chat-messages"></div>
+        <div class="chat-input">
+            <input type="text" id="chat-text" placeholder="Type your message...">
+            <label for="chat-image">📷</label>
+            <input type="file" id="chat-image" accept="image/*">
+            <label for="chat-voice">🎙️</label>
+            <input type="file" id="chat-voice" accept="audio/*">
+            <button onclick="sendChatMessage()">Send</button>
         </div>
-        <button class="back-btn" onclick="window.location.href='index.html'">Back to Home</button>
+        <p id="chat-error" class="error-message hidden"></p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script>
+    <script type="module">
+        import { getChatMessages, sendMessage, subscribeToChat } from './data.js';
+
         const supabaseUrl = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey, { fetch: (...args) => fetch(...args) });
         const imgurClientId = '5befa9dd970c7d0';
 
-        let currentUserId = localStorage.getItem('userId');
-        let mediaRecorder;
-        let recordedBlobs = [];
+        let currentUser = { user_id: null, username: 'User' };
+
+        async function initializeChat() {
+            try {
+                const userId = localStorage.getItem('userId');
+                if (!userId) {
+                    alert('User ID not found. Please return to the main page.');
+                    window.location.href = 'index.html';
+                    return;
+                }
+                currentUser.user_id = userId;
+
+                const { data: user, error } = await supabase
+                    .from('users')
+                    .select('username')
+                    .eq('user_id', userId)
+                    .single();
+                if (error) throw new Error(`Fetch User Error: ${error.message}`);
+                currentUser.username = user.username || `User${userId}`;
+
+                await loadMessages();
+                subscribeToChat(userId, () => loadMessages());
+            } catch (error) {
+                console.error('Initialize Chat Error:', error.message);
+                document.getElementById('chat-error').textContent = `Error: ${error.message}`;
+                document.getElementById('chat-error').classList.remove('hidden');
+            }
+        }
 
         async function loadMessages() {
             try {
-                const { data: messages, error } = await supabase
-                    .from('chat_messages')
-                    .select('*')
-                    .eq('user_id', currentUserId)
-                    .order('created_at', { ascending: true });
-                if (error) throw error;
-
-                const chatArea = document.getElementById('chat-area');
-                chatArea.innerHTML = '';
+                const messages = await getChatMessages(currentUser.user_id);
+                const chatMessages = document.getElementById('chat-messages');
+                chatMessages.innerHTML = '';
 
                 messages.forEach(msg => {
                     const messageDiv = document.createElement('div');
-                    messageDiv.className = `message ${msg.user_id === currentUserId ? 'sent' : 'received'}`;
-                    if (msg.message_type === 'text') {
-                        messageDiv.textContent = msg.content;
-                    } else if (msg.message_type === 'image') {
-                        messageDiv.innerHTML = `<img src="${msg.content}" alt="Chat Image">`;
-                    } else if (msg.message_type === 'voice') {
-                        messageDiv.innerHTML = `<audio controls><source src="${msg.content}" type="audio/webm"></audio>`;
-                    }
-                    chatArea.appendChild(messageDiv);
+                    messageDiv.className = `message ${msg.user_id === currentUser.user_id && !msg.admin_response ? 'user' : 'admin'}`;
+                    let content = '';
+                    if (msg.message) content += `<p>${msg.message}</p>`;
+                    if (msg.image_message) content += `<img src="${msg.image_message}" alt="Chat Image">`;
+                    if (msg.voice_message) content += `<audio controls src="${msg.voice_message}"></audio>`;
+                    if (msg.admin_response) content += `<p>${msg.admin_response}</p>`;
+                    messageDiv.innerHTML = `
+                        ${content}
+                        <div class="message-timestamp">${new Date(msg.created_at).toLocaleString()}</div>
+                    `;
+                    chatMessages.appendChild(messageDiv);
                 });
 
-                chatArea.scrollTop = chatArea.scrollHeight;
+                chatMessages.scrollTop = chatMessages.scrollHeight;
             } catch (error) {
                 console.error('Load Messages Error:', error.message);
-                alert(`Error loading messages: ${error.message}`);
+                document.getElementById('chat-error').textContent = `Error loading messages: ${error.message}`;
+                document.getElementById('chat-error').classList.remove('hidden');
             }
         }
 
@@ -202,76 +263,38 @@
             }
         }
 
-        async function sendMessage() {
+        async function sendChatMessage() {
             try {
-                const input = document.getElementById('chat-input');
-                const imageInput = document.getElementById('chat-image');
-                let messageType = 'text';
-                let content = input.value;
+                document.getElementById('chat-error').classList.add('hidden');
+                const text = document.getElementById('chat-text').value.trim();
+                const imageFile = document.getElementById('chat-image').files[0];
+                const voiceFile = document.getElementById('chat-voice').files[0];
 
-                if (imageInput.files[0]) {
-                    messageType = 'image';
-                    content = await uploadToImgur(imageInput.files[0]);
-                    imageInput.value = '';
+                if (!text && !imageFile && !voiceFile) {
+                    document.getElementById('chat-error').textContent = 'Please enter a message or select a file.';
+                    document.getElementById('chat-error').classList.remove('hidden');
+                    return;
                 }
 
-                if (!content && !recordedBlobs.length) return;
+                let imageUrl = null, voiceUrl = null;
+                if (imageFile) imageUrl = await uploadToImgur(imageFile);
+                if (voiceFile) voiceUrl = await uploadToImgur(voiceFile);
 
-                if (recordedBlobs.length) {
-                    messageType = 'voice';
-                    const blob = new Blob(recordedBlobs, { type: 'audio/webm' });
-                    content = await uploadToImgur(blob);
-                    recordedBlobs = [];
-                }
+                await sendMessage(currentUser.user_id, currentUser.username, text, imageUrl, voiceUrl);
 
-                const { error } = await supabase
-                    .from('chat_messages')
-                    .insert({ user_id: currentUserId, message_type: messageType, content, is_read: false });
-                if (error) throw error;
-
-                input.value = '';
-                loadMessages();
+                document.getElementById('chat-text').value = '';
+                document.getElementById('chat-image').value = '';
+                document.getElementById('chat-voice').value = '';
+                await loadMessages();
             } catch (error) {
-                console.error('Send Message Error:', error.message);
-                alert(`Error sending message: ${error.message}`);
+                console.error('Send Chat Message Error:', error.message);
+                document.getElementById('chat-error').textContent = `Error sending message: ${error.message}`;
+                document.getElementById('chat-error').classList.remove('hidden');
             }
         }
 
-        async function startRecording() {
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-                mediaRecorder = new MediaRecorder(stream);
-                recordedBlobs = [];
-
-                mediaRecorder.ondataavailable = event => {
-                    if (event.data.size > 0) {
-                        recordedBlobs.push(event.data);
-                    }
-                };
-
-                mediaRecorder.onstop = () => {
-                    stream.getTracks().forEach(track => track.stop());
-                };
-
-                mediaRecorder.start();
-                setTimeout(() => {
-                    if (mediaRecorder.state === 'recording') {
-                        mediaRecorder.stop();
-                    }
-                }, 10000); // Max 10 seconds
-            } catch (error) {
-                console.error('Recording Error:', error.message);
-                alert(`Error starting recording: ${error.message}`);
-            }
-        }
-
-        supabase.channel('chat-messages-channel')
-            .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'chat_messages', filter: `user_id=eq.${currentUserId}` }, payload => {
-                loadMessages();
-            })
-            .subscribe();
-
-        window.onload = loadMessages;
+        window.onload = initializeChat;
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
 </html>
